--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   supabase_flutter: ^2.5.3
   connectivity_plus: ^6.0.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
