--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   supabase_flutter: ^2.5.3
   connectivity_plus: ^6.0.3
   path_provider: ^2.1.3
+  dropdown_button2: ^2.3.9
+  mask_text_input_formatter: ^2.9.0
+  intl: ^0.19.0
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
